skin/adminhtml/default/default/boxes.css
/* ... */
#loading-mask {
    position:absolute;
    color:#d85909;
    font-size:1.1em;
    font-weight:bold;
    text-align:center;
    filter:alpha(opacity=80);
    -moz-opacity: 0.80;
    opacity: 0.80;
    z-index:500;
    }
#loading-mask .loader {
    position:fixed;
    top:45%;
    left:50%;
    width:120px;
    margin-left:-60px;
    padding:15px 60px;
    background:#fff4e9;
    border:2px solid #f1af73;
    color:#d85909;
    font-weight:bold;
    text-align:center;
    z-index:1000;
    }



/* TABLES
*******************************************************************************/

/* Grid - General */
.grid                           { position:relative; border-bottom:0; padding-bottom:.5em; }
.grid table                     { width:100%; border:1px solid #cbd3d4; border-bottom:none; }
.grid tbody                     { background:#fff; }    /* Zebra odd-row */
.grid tr.even, .grid tr.even tr { background:#f6f6f6; } /* Zebra even-row */
.grid tr.on-mouse               { background:#fcf5dd; } /* Rows mouse-over */
.grid tr.invalid                { background-color: #d3a5ba !important; }
.grid th, .grid td              { padding:2px 5px; }
.grid th                        { white-space:nowrap; }
.grid td input.input-text       { width:95% !important; }
.grid table td                  { border-width:0 1px 1px 0; border-color:#dadfe0; border-style:solid; }
.grid table td.last             { border-right:0; }
.grid table td.product          { text-align:right; }
.grid table td.empty-text       { padding:15px; }
.grid table td .action-select   { width: 100%; }
.grid .separator                { padding:0 4px; color:#b9b9b9; }

/* Grid - Pager and Buttons row */
table.actions                   { width:100%; margin:.5em 0; }
table.actions td                { vertical-align:top; }
.pager select                   { width:4em; margin:0 4px; }
.pager input.page               { width:2em !important; }
.pager .arrow                   { margin: 0 3px; vertical-align:middle; }


/* Grid - Headings */
.grid tr.headings               { background:url(images/sort_row_bg.gif) repeat-x 0 50%; zoom:1; }
.grid tr.headings th {
    border-width:1px;
    border-color:#f9f9f9 #d1cfcf #f9f9f9 #f9f9f9;
    border-style:solid;
    padding-top:1px;
    padding-bottom:0;
    font-size:.95em;
    }
.grid tr.headings th.last { border-right:0; }
.grid tr.headings th.no-link { /* Grid th with no sorting functionality */
    padding-top:2px;
    padding-bottom:1px;
    color:#67767e;
    }
.grid tr.headings th a, .grid tr.headings th a:hover {
    display:block;
    padding:2px 4px 1px 0;
    color:#2d444f;
    text-decoration:none;
    }
.grid tr.headings th a:hover    { color:#d85909; }
.grid th a.sort-arrow-desc, .grid th a.sort-arrow-asc {
    background:url(images/sort_on_bg.gif) no-repeat;
    border-bottom:1px solid #fff;
    border-right:1px solid #fff;
    padding-bottom:2px;
    }
.grid tr.headings th a.sort-arrow-asc,
.grid tr.headings th a.sort-arrow-asc:hover,
.grid tr.headings th a.sort-arrow-desc,
.grid tr.headings  th a.sort-arrow-desc:hover {
    text-decoration:none;
    }
.grid th .sort-arrow-desc span.sort-title, .grid th .sort-arrow-asc span.sort-title {
    background-position: right 50%;
    background-repeat: no-repeat;
    padding:3px 11px 2px 8px;
    }
.grid .sort-arrow-desc span.sort-title  { background-image: url(images/grid_sort_desc.gif); }
.grid .sort-arrow-asc span.sort-title   { background-image: url(images/grid_sort_asc.gif); }


/* Grid - Mass Action */
.massaction {
    width: 100%;
    height: 26px;
    border:1px solid #d1cfcf;
    border-bottom:none;
    background: url(images/massaction_bg.gif) repeat-x 0 100% #ebebeb;
    font-size:.9em;
    }
.massaction td                              { width:50%; border-top:1px solid #fff; padding:1px 8px; vertical-align:middle; }
.massaction .entry-edit fieldset .select    { width:120px; }
.massaction .entry-edit fieldset            { margin:0; padding:0; background:none; border:none; }
.massaction .entry-edit fieldset .field-row { display:inline; }
.massaction .entry-edit                     { margin:0 !important; padding:0; }
.massaction a { text-decoration:none; }
.massaction .entry-edit fieldset span.form_row,
.massaction .entry-edit fieldset span.field-row {
    clear:none !important;
    display:block;
    float:left !important;
    margin:0pt;
    padding:0px 5px 0px 0px;
    }

/* Grid - Filter */
.grid tr.filter                 { background:url(images/filter_row_bg.gif) repeat-x #e3eff1; cursor: default; }
.grid tr.filter th {
    padding-top:5px;
    padding-bottom:5px;
    border-width:0 1px 1px 0;
    border-style:solid;
    border-color:#bdbdbd;
    }
.grid tr.filter th.last         { border-right:0; }
.grid tr.filter input           { width: 95% !important; }
.grid tr.filter select          { width:100% /*!important why?*/; }
.grid tr.filter .range div.range-line { margin-bottom:4px; width:100px; }
.grid tr.filter .range div.date { width: 140px; }
.grid tr.filter .range input    { width: 4em !important; margin-bottom:-1px; margin-top:0; }
.grid tr.filter .range select   { width: 5em !important; margin-bottom:-1px; margin-top:0; }
.grid tr.filter .range .label   { display: block; width: 3em; float: left; padding-left: 2px; }
.grid tr.filter .date img       { width:15px; height:15px; cursor: pointer; vertical-align: middle; }
.grid th span.sort-title        { display:block; padding:3px 12px 4px 0; line-height:1em; }

.grid .head-massaction select   { width: 50px !important; }

/* Grid Footer */
.grid table tfoot tr            { background:#D7E5EF; }
.grid tfoot td                  { border-top:1px solid #9babb9; background:#e5ecf2; line-height:1.7em; }

/* Dynamic Grid */ /* Used in pages like Catalog -> Attributes */
.dynamic-grid th                { padding:2px;width:100px;}
.dynamic-grid td                { padding:2px;}
.dynamic-grid td input          { width:94px; }
/* ... */

